--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -4,20 +4,459 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your Name Here"
+    "# Michael Somppi"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Research question/interests\r\n",
-    "\r\n",
-    "Briefly describe your research question or interests here."
+    "## Research question/interests\n",
+    "\n",
+    "I am interested in analyzing how the world's energy mix has changed over time. What countries have the 'cleanest' energy mix? Which countries get the highest share of energy from low-carbon sources? Which countries have the lowest emissions per capita? Is there a strong correlation between low emissions per capita and a high share of low-carbon energy sources?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>population</th>\n",
+       "      <th>gdp</th>\n",
+       "      <th>biofuel_cons_change_pct</th>\n",
+       "      <th>biofuel_cons_change_twh</th>\n",
+       "      <th>biofuel_cons_per_capita</th>\n",
+       "      <th>biofuel_consumption</th>\n",
+       "      <th>biofuel_elec_per_capita</th>\n",
+       "      <th>...</th>\n",
+       "      <th>solar_share_elec</th>\n",
+       "      <th>solar_share_energy</th>\n",
+       "      <th>wind_cons_change_pct</th>\n",
+       "      <th>wind_cons_change_twh</th>\n",
+       "      <th>wind_consumption</th>\n",
+       "      <th>wind_elec_per_capita</th>\n",
+       "      <th>wind_electricity</th>\n",
+       "      <th>wind_energy_per_capita</th>\n",
+       "      <th>wind_share_elec</th>\n",
+       "      <th>wind_share_energy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4832414.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1901</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4879685.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4935122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1903</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4998861.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>5063419.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22338</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14236599.0</td>\n",
+       "      <td>2.194784e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22339</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14438812.0</td>\n",
+       "      <td>2.271535e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.011</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22340</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14645473.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.947</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.088</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22341</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14862927.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.221</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22342</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>15092171.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>22343 rows × 128 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country  year iso_code  population           gdp  \\\n",
+       "0      Afghanistan  1900      AFG   4832414.0           NaN   \n",
+       "1      Afghanistan  1901      AFG   4879685.0           NaN   \n",
+       "2      Afghanistan  1902      AFG   4935122.0           NaN   \n",
+       "3      Afghanistan  1903      AFG   4998861.0           NaN   \n",
+       "4      Afghanistan  1904      AFG   5063419.0           NaN   \n",
+       "...            ...   ...      ...         ...           ...   \n",
+       "22338     Zimbabwe  2017      ZWE  14236599.0  2.194784e+10   \n",
+       "22339     Zimbabwe  2018      ZWE  14438812.0  2.271535e+10   \n",
+       "22340     Zimbabwe  2019      ZWE  14645473.0           NaN   \n",
+       "22341     Zimbabwe  2020      ZWE  14862927.0           NaN   \n",
+       "22342     Zimbabwe  2021      ZWE  15092171.0           NaN   \n",
+       "\n",
+       "       biofuel_cons_change_pct  biofuel_cons_change_twh  \\\n",
+       "0                          NaN                      NaN   \n",
+       "1                          NaN                      NaN   \n",
+       "2                          NaN                      NaN   \n",
+       "3                          NaN                      NaN   \n",
+       "4                          NaN                      NaN   \n",
+       "...                        ...                      ...   \n",
+       "22338                      NaN                      NaN   \n",
+       "22339                      NaN                      NaN   \n",
+       "22340                      NaN                      NaN   \n",
+       "22341                      NaN                      NaN   \n",
+       "22342                      NaN                      NaN   \n",
+       "\n",
+       "       biofuel_cons_per_capita  biofuel_consumption  biofuel_elec_per_capita  \\\n",
+       "0                          NaN                  NaN                      NaN   \n",
+       "1                          NaN                  NaN                      NaN   \n",
+       "2                          NaN                  NaN                      NaN   \n",
+       "3                          NaN                  NaN                      NaN   \n",
+       "4                          NaN                  NaN                      NaN   \n",
+       "...                        ...                  ...                      ...   \n",
+       "22338                      NaN                  NaN                   22.477   \n",
+       "22339                      NaN                  NaN                   27.011   \n",
+       "22340                      NaN                  NaN                   25.947   \n",
+       "22341                      NaN                  NaN                   24.221   \n",
+       "22342                      NaN                  NaN                      NaN   \n",
+       "\n",
+       "       ...  solar_share_elec  solar_share_energy  wind_cons_change_pct  \\\n",
+       "0      ...               NaN                 NaN                   NaN   \n",
+       "1      ...               NaN                 NaN                   NaN   \n",
+       "2      ...               NaN                 NaN                   NaN   \n",
+       "3      ...               NaN                 NaN                   NaN   \n",
+       "4      ...               NaN                 NaN                   NaN   \n",
+       "...    ...               ...                 ...                   ...   \n",
+       "22338  ...             0.137                 NaN                   NaN   \n",
+       "22339  ...             0.110                 NaN                   NaN   \n",
+       "22340  ...             0.088                 NaN                   NaN   \n",
+       "22341  ...             0.090                 NaN                   NaN   \n",
+       "22342  ...               NaN                 NaN                   NaN   \n",
+       "\n",
+       "       wind_cons_change_twh  wind_consumption  wind_elec_per_capita  \\\n",
+       "0                       NaN               NaN                   NaN   \n",
+       "1                       NaN               NaN                   NaN   \n",
+       "2                       NaN               NaN                   NaN   \n",
+       "3                       NaN               NaN                   NaN   \n",
+       "4                       NaN               NaN                   NaN   \n",
+       "...                     ...               ...                   ...   \n",
+       "22338                   NaN               NaN                   0.0   \n",
+       "22339                   NaN               NaN                   0.0   \n",
+       "22340                   NaN               NaN                   0.0   \n",
+       "22341                   NaN               NaN                   0.0   \n",
+       "22342                   NaN               NaN                   NaN   \n",
+       "\n",
+       "       wind_electricity  wind_energy_per_capita  wind_share_elec  \\\n",
+       "0                   NaN                     NaN              NaN   \n",
+       "1                   NaN                     NaN              NaN   \n",
+       "2                   NaN                     NaN              NaN   \n",
+       "3                   NaN                     NaN              NaN   \n",
+       "4                   NaN                     NaN              NaN   \n",
+       "...                 ...                     ...              ...   \n",
+       "22338               0.0                     NaN              0.0   \n",
+       "22339               0.0                     NaN              0.0   \n",
+       "22340               0.0                     NaN              0.0   \n",
+       "22341               0.0                     NaN              0.0   \n",
+       "22342               NaN                     NaN              NaN   \n",
+       "\n",
+       "       wind_share_energy  \n",
+       "0                    NaN  \n",
+       "1                    NaN  \n",
+       "2                    NaN  \n",
+       "3                    NaN  \n",
+       "4                    NaN  \n",
+       "...                  ...  \n",
+       "22338                NaN  \n",
+       "22339                NaN  \n",
+       "22340                NaN  \n",
+       "22341                NaN  \n",
+       "22342                NaN  \n",
+       "\n",
+       "[22343 rows x 128 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df1 = pd.read_csv('owid-energy-data.csv')\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
