--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -438,7 +438,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "df1 = pd.read_csv('owid-energy-data.csv')\n",
+    "df1 = pd.read_csv('https://raw.githubusercontent.com/ubco-W2022T1-cosc301/project-group02/main/data/raw/owid-energy-data.csv?token=GHSAT0AAAAAABYRT7JTK52JDYMKUPB56NPKY2GDVCA')\n",
     "df1"
    ]
   },
