--- a/notebooks/analysis3.ipynb
+++ b/notebooks/analysis3.ipynb
@@ -4,20 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your Name Here"
+    "# Alex Huisman"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Research question/interests\r\n",
-    "\r\n",
+    "## Research question/interests\n",
+    "\n",
     "Briefly describe your research question or interests here."
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.10.7 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
