--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -430,14 +430,14 @@
        "[22343 rows x 128 columns]"
       ]
      },
-     "execution_count": null,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df2 = pd.read_csv('owid-energy-data.csv')\n",
+    "df2 = pd.read_csv('https://raw.githubusercontent.com/ubco-W2022T1-cosc301/project-group02/main/data/raw/owid-energy-data.csv?token=GHSAT0AAAAAABZ2PYMJFFN2DTYEIT23TBXEY2GDROQ')\n",
     "df2"
    ]
   },
@@ -461,6 +461,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
