--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Research question/interests\n",
     "\n",
-    "I am interested in analyzing how the world's energy mix has changed over time. What countries have the 'cleanest' energy mix? Which countries get the highest share of energy from low-carbon sources? Which countries have the lowest emissions per capita? Is there a strong correlation between low emissions per capita and a high share of low-carbon energy sources?"
+    "I am interested in analyzing the electrification of our world to see if the data supports electricity being a cleaner form of energy. First, I want to see how the world’s electricity generation and demand has changed over time in comparison to other forms of energy. What countries have the highest share of electricity production in their overall energy mix? Of these countries, what is their GDP and what is their electricity mix? Is there a correlation between higher GDP countries and more renewables in their electricity mix? Is there a strong correlation between countries with high electricity production from low-carbon sources and lower emissions? I can envision making a dashboard to visualize the answers to these questions using the database from Our World in Data."
    ]
   },
   {
@@ -455,18 +455,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
   }
  },
  "nbformat": 4,
