Started working on Milestone 3.

--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -122,8 +122,28 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df2 = pd.read_csv('../data/raw/owid-energy-data.csv')\n",
-    "print(df2)"
+    "df = pd.read_csv('../data/raw/owid-energy-data.csv')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone 3 Task 1\n",
+    "\n",
+    "1. which countries produce the highest percentage of their energy in a clean matter \n",
+    "2. which countries produce the highest percentage of their energy via coal when compared to that country's overall energy mix\n",
+    "3. which country has made the largest reduction in their usage of fossil fuels to produce energy\n",
+    "4. what were the percentages of sources of energy production for countries in this dataset in the mid 1900's compared to now\n",
+    "5. most energy producing countries each 10 years and see if those countries have a pattern of producing the most or if it varies every 20 to 30 years. \n",
+    "## Description of the dataset:\n",
+    "- This data was provided by [Our World in Data](https://ourworldindata.org/), a non-profit organization that focuses on the large problems around the world.\n",
+    "- Our dataset includes data on each countries energy consumption, energy mix, electricity mix, and related metrics for the past decades.\n",
+    "- Our data was collected from 1965 to 2021.\n",
+    "- The purpose of our dataset is to help show the public that our world lacks efficient, clean, and inexpensive alternatives to fossil fuels.\n",
+    "- Our data was collected by a team of researchers who used numerous different datasets from multiple countries and compiled them together into a comprehensive dataset.\n",
+    "    "
    ]
   },
   {
@@ -131,7 +151,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## setup\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as  plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "%matplotlib inline\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
   }
  ],
  "metadata": {
