Analysis1 Task 3 Complete

--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -3998,15 +3998,135 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'project_functions1' has no attribute 'electricitymix'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mproject_functions1\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m dfTest \u001b[38;5;241m=\u001b[39m \u001b[43mproject_functions1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melectricitymix\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/raw/owid-energy-data.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m dfTest\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'project_functions1' has no attribute 'electricitymix'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Electricity Mix</th>\n",
+       "      <th>Per Capita Electricity (KW-hrs)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>276.903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>297.927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>306.303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>283.600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>291.053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1343</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>790.168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1344</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>842.020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1345</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>908.244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1346</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>1031.265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1347</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>1152.256</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1348 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Year        Country Electricity Mix  Per Capita Electricity (KW-hrs)\n",
+       "0     2000         Canada         biofuel                          276.903\n",
+       "1     2001         Canada         biofuel                          297.927\n",
+       "2     2002         Canada         biofuel                          306.303\n",
+       "3     2003         Canada         biofuel                          283.600\n",
+       "4     2004         Canada         biofuel                          291.053\n",
+       "...    ...            ...             ...                              ...\n",
+       "1343  2017  United States            wind                          790.168\n",
+       "1344  2018  United States            wind                          842.020\n",
+       "1345  2019  United States            wind                          908.244\n",
+       "1346  2020  United States            wind                         1031.265\n",
+       "1347  2021  United States            wind                         1152.256\n",
+       "\n",
+       "[1348 rows x 4 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
