Minor edits to Analysis1

--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -3671,7 +3671,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wow, that's a much different picture compared to Canada!"
+    "Wow, that's a much different picture compared to Canada! There's lots to explore in this dataset that will provide valuable insight for my research questions. We're ready to move forward with a more formal analysis."
    ]
   },
   {
@@ -3696,7 +3696,7 @@
    "metadata": {},
    "source": [
     "### Clean, Process, and Wrangle Data\n",
-    "In my EDA, I manipulated the dataframe into multiple ways that will be useful for further analysis. Here, I will highlight the process for restructing each dataframe."
+    "In my EDA, I manipulated the dataframe into multiple ways that will be useful for further analysis. Here, I will highlight the process for constructing each dataframe."
    ]
   },
   {
@@ -3839,7 +3839,7 @@
    "metadata": {},
    "source": [
     "## Method Chaining and Writing Python Programs\n",
-    "These programs are moved to project_functions1.py."
+    "Functions were created to easily reproduce each dataframe. These programs were moved to project_functions1.py for use in this repository."
    ]
   },
   {
