Milestone 4 Task 1 - Tableau Data

--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -524,7 +524,7 @@
      "output_type": "stream",
      "text": [
       "The columns in the dataset are: \n",
-      " {'oil_cons_change_twh', 'fossil_fuel_consumption', 'low_carbon_elec_per_capita', 'energy_per_gdp', 'hydro_elec_per_capita', 'nuclear_elec_per_capita', 'solar_energy_per_capita', 'iso_code', 'low_carbon_consumption', 'energy_cons_change_twh', 'other_renewable_consumption', 'primary_energy_consumption', 'renewables_cons_change_twh', 'nuclear_share_elec', 'solar_cons_change_twh', 'electricity_demand', 'oil_energy_per_capita', 'low_carbon_share_elec', 'wind_consumption', 'solar_electricity', 'gas_energy_per_capita', 'solar_elec_per_capita', 'other_renewables_share_elec_exc_biofuel', 'coal_electricity', 'hydro_consumption', 'oil_consumption', 'other_renewable_exc_biofuel_electricity', 'other_renewables_share_energy', 'electricity_generation', 'low_carbon_energy_per_capita', 'fossil_cons_change_twh', 'fossil_energy_per_capita', 'coal_consumption', 'solar_consumption', 'renewables_consumption', 'low_carbon_share_energy', 'wind_share_energy', 'other_renewables_elec_per_capita_exc_biofuel', 'fossil_elec_per_capita', 'energy_per_capita', 'greenhouse_gas_emissions', 'oil_share_energy', 'hydro_share_energy', 'coal_cons_per_capita', 'hydro_electricity', 'carbon_intensity_elec', 'biofuel_consumption', 'oil_prod_change_twh', 'other_renewable_electricity', 'renewables_share_energy', 'oil_electricity', 'gdp', 'other_renewables_cons_change_twh', 'oil_elec_per_capita', 'biofuel_share_elec', 'hydro_cons_change_twh', 'biofuel_share_energy', 'solar_share_energy', 'coal_share_energy', 'nuclear_cons_change_pct', 'fossil_share_elec', 'gas_production', 'country', 'renewables_share_elec', 'low_carbon_electricity', 'wind_elec_per_capita', 'hydro_energy_per_capita', 'net_elec_imports', 'oil_cons_change_pct', 'oil_prod_change_pct', 'hydro_share_elec', 'renewables_cons_change_pct', 'biofuel_electricity', 'coal_share_elec', 'oil_share_elec', 'nuclear_share_energy', 'solar_share_elec', 'other_renewables_elec_per_capita', 'nuclear_electricity', 'gas_consumption', 'fossil_electricity', 'renewables_elec_per_capita', 'biofuel_cons_change_pct', 'coal_prod_per_capita', 'wind_energy_per_capita', 'coal_prod_change_pct', 'biofuel_elec_per_capita', 'oil_prod_per_capita', 'gas_share_energy', 'coal_elec_per_capita', 'gas_electricity', 'gas_prod_per_capita', 'wind_cons_change_twh', 'nuclear_cons_change_twh', 'low_carbon_cons_change_twh', 'year', 'low_carbon_cons_change_pct', 'other_renewables_cons_change_pct', 'gas_elec_per_capita', 'nuclear_energy_per_capita', 'population', 'gas_prod_change_twh', 'coal_production', 'renewables_energy_per_capita', 'coal_prod_change_twh', 'biofuel_cons_change_twh', 'fossil_cons_change_pct', 'renewables_electricity', 'oil_production', 'gas_cons_change_twh', 'other_renewables_share_elec', 'nuclear_consumption', 'other_renewables_energy_per_capita', 'coal_cons_change_twh', 'per_capita_electricity', 'wind_share_elec', 'fossil_share_energy', 'gas_cons_change_pct', 'wind_electricity', 'solar_cons_change_pct', 'gas_prod_change_pct', 'net_elec_imports_share_demand', 'hydro_cons_change_pct', 'coal_cons_change_pct', 'wind_cons_change_pct', 'biofuel_cons_per_capita', 'gas_share_elec', 'energy_cons_change_pct'}\n"
+      " {'low_carbon_cons_change_twh', 'solar_share_elec', 'fossil_cons_change_twh', 'low_carbon_share_elec', 'gas_cons_change_twh', 'wind_cons_change_pct', 'oil_production', 'gas_elec_per_capita', 'renewables_energy_per_capita', 'gas_share_elec', 'nuclear_electricity', 'oil_electricity', 'solar_cons_change_twh', 'nuclear_share_elec', 'electricity_generation', 'fossil_energy_per_capita', 'other_renewables_share_elec', 'hydro_electricity', 'coal_share_energy', 'oil_prod_per_capita', 'oil_share_elec', 'other_renewables_cons_change_twh', 'wind_cons_change_twh', 'coal_prod_per_capita', 'energy_cons_change_pct', 'biofuel_share_elec', 'wind_elec_per_capita', 'other_renewables_cons_change_pct', 'low_carbon_elec_per_capita', 'coal_elec_per_capita', 'year', 'gas_electricity', 'energy_per_gdp', 'solar_energy_per_capita', 'wind_share_energy', 'low_carbon_consumption', 'wind_consumption', 'hydro_consumption', 'wind_share_elec', 'renewables_cons_change_twh', 'gas_prod_per_capita', 'gas_energy_per_capita', 'other_renewables_share_energy', 'oil_prod_change_pct', 'fossil_fuel_consumption', 'greenhouse_gas_emissions', 'solar_consumption', 'iso_code', 'fossil_elec_per_capita', 'renewables_elec_per_capita', 'biofuel_cons_change_twh', 'biofuel_cons_change_pct', 'low_carbon_electricity', 'other_renewable_consumption', 'nuclear_share_energy', 'nuclear_cons_change_twh', 'oil_consumption', 'low_carbon_share_energy', 'carbon_intensity_elec', 'gas_production', 'oil_prod_change_twh', 'coal_prod_change_pct', 'coal_cons_change_twh', 'coal_production', 'hydro_cons_change_twh', 'other_renewables_energy_per_capita', 'biofuel_consumption', 'biofuel_share_energy', 'nuclear_cons_change_pct', 'hydro_energy_per_capita', 'gdp', 'gas_prod_change_twh', 'hydro_cons_change_pct', 'renewables_share_elec', 'coal_electricity', 'wind_energy_per_capita', 'oil_cons_change_pct', 'solar_cons_change_pct', 'energy_per_capita', 'gas_consumption', 'nuclear_consumption', 'nuclear_elec_per_capita', 'hydro_share_elec', 'fossil_electricity', 'coal_consumption', 'net_elec_imports', 'renewables_electricity', 'other_renewables_elec_per_capita_exc_biofuel', 'fossil_cons_change_pct', 'oil_energy_per_capita', 'fossil_share_elec', 'low_carbon_energy_per_capita', 'wind_electricity', 'electricity_demand', 'country', 'coal_cons_per_capita', 'other_renewable_electricity', 'coal_cons_change_pct', 'solar_elec_per_capita', 'other_renewable_exc_biofuel_electricity', 'oil_cons_change_twh', 'energy_cons_change_twh', 'primary_energy_consumption', 'low_carbon_cons_change_pct', 'solar_share_energy', 'renewables_consumption', 'hydro_elec_per_capita', 'per_capita_electricity', 'solar_electricity', 'biofuel_electricity', 'coal_share_elec', 'oil_elec_per_capita', 'population', 'renewables_share_energy', 'other_renewables_elec_per_capita', 'gas_cons_change_pct', 'renewables_cons_change_pct', 'oil_share_energy', 'gas_share_energy', 'biofuel_cons_per_capita', 'net_elec_imports_share_demand', 'nuclear_energy_per_capita', 'fossil_share_energy', 'hydro_share_energy', 'gas_prod_change_pct', 'other_renewables_share_elec_exc_biofuel', 'coal_prod_change_twh', 'biofuel_elec_per_capita'}\n"
      ]
     }
    ],
@@ -3627,7 +3627,7 @@
     "df_electricity = df_electricity.dropna(subset=[\"electricity_generation\"])\n",
     "# remove rows that don't reach the specified non-null value threshold\n",
     "df_electricity = df_electricity.dropna(axis=0, thresh=5)\n",
-    "# remove all row with Nan in column 'population'\n",
+    "# remove all rows with Nan in column 'population'\n",
     "df_electricity = df_electricity.dropna(subset=[\"population\"])\n",
     "# remove non-countries from dataset\n",
     "df_electricity = df_electricity[df_electricity[\"country\"].str.contains(\"World|Asia|income|America|Europe|Africa|Oceania\")==False]\n",
@@ -3810,7 +3810,7 @@
     "#         .rename(columns={\"per_capita_electricity\" : \"Per Capita Generation\"})\n",
     "#         .rename(columns={\"electricity_demand\" : \"Electricity Demand\"})\n",
     "#     )\n",
-    "    \n",
+    "        \n",
     "#     # Remove rows from prior to the year 2000\n",
     "#     df_comp = df_comp[df_comp[\"Year\"] >= 2000]\n",
     "#     # Add a new column for per capita electricity demand converted from terawatt-hours to kilowatt-hours\n",
@@ -4408,6 +4408,40 @@
     "Canada and Finland have approximately 80% share of electricity produced from low carbon sources. Finland relies mostly on nuclear power, while Canada generates the majority of its electricity from nuclear and hydropower. Their carbon dioxide emissions from electricity production are relatively low.\n",
     "\n",
     "The combined trend for the top 10 countries is stable or increasing electricity generation from renewables and stable or decreasing electricity generation from non-renewables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tableau Dashboard Data\n",
+    "The following dataframes were saved to the processed folder for use in the corresponding Tableau dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in electricity comparison dataframe from python function 1\n",
+    "dfcomp = project_functions1.electricitycomp(\"../data/raw/owid-energy-data.csv\")\n",
+    "\n",
+    "# Save the dataframe to csv in the project repository data/processed folder\n",
+    "df.to_csv(\"../data/processed/electricitycomparison.csv\", index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in electricity master dataframe from python function 1\n",
+    "df_elecmix = project_functions1.elecmix(\"../data/raw/owid-energy-data.csv\")\n",
+    "\n",
+    "# Save the dataframe to csv in the project repository data/processed folder\n",
+    "df.to_csv(\"../data/processed/electricitymix.csv\", index=None)"
    ]
   },
   {
